some styling changes,directions button not working fixed

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,7 +3,8 @@
   background-color: $color-grey-light-1;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 5rem;
 
   &__logo {
     margin-left: 4rem;
