--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -68,6 +68,7 @@
     display: flex;
     align-items: center;
     padding: 7.5rem 8rem 3.5rem 8rem;
+    justify-content: space-between;
   }
 
   &__info {
